8231197: Shenandoah: JVMTI heap walking cleanup crashes with NULL forwardee

Reviewed-by: zgu, rkennke